--- a/113306048_CSS_Lab.html
+++ b/113306048_CSS_Lab.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Page</title>
+    <title>My First Style Page</title>
     <link rel="stylesheet" href="113306048_CSS_Lab.css">
 </head>
 <body>
